Delete button  not aligned to resources fix

--- a/src/components/principal/unit/form/addResourceForm.css
+++ b/src/components/principal/unit/form/addResourceForm.css
@@ -80,7 +80,7 @@
 }
 
 .delete-resource > button {
-  margin-top: 13px;
+  margin-top: 5px;
 }
 
 .errors {
